2021-11-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix and enhance arrayPath property, improve tests and documentation, resolves #216
	* Prepend debug messages with "External Import", resolves #217

2021-11-24 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure data sent to log is an array

2021-11-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix access to undefined array keys

2021-11-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.0.1

2021-11-14 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Log message when record with empty value is dropped, references #209

2021-11-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix access to undefined array keys
	* Fix test classes setUp method signature
	* Update handling of exceptions in test classes
	* Improve test setup for GeneralConfigurationValidator test class
	* Avoid trimming non-string data, resolves #212

2021-10-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure an array is passed when getting a value from a substructure

2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.0.0

2021-10-04 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve documentation for "children" property (thanks to Mathias Brodala)
	* Allow for multiple report recipients (thanks to Mathias Brodala)
	* Review documentation, resolves #200

2021-10-03 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix command line exit codes, resolves #208
	* Fix slug generation upon upates, resolves #195

2021-09-29 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Allow for arrayPath to return simple values if needed, references #205

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8, resolves #207
	* Move command-line declaration to services configuration, references #164

2021-08-24 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Enhance arrayPath properties with conditions, resolves #205
